@@ -105,6 +105,7 @@ icons=AdjustWidth.png \
 	NewDir.png \
 	New.png \
 	NewView.png \
+	NextFile.png \
 	Open.png \
 	PageSetup.png \
 	ParentDir.png \
@@ -115,6 +116,7 @@ icons=AdjustWidth.png \
 	Plugins.png \
 	Plus.png \
 	Preferences.png \
+	PreviousFile.png \
 	Print.png \
 	Properties.png \
 	Redo.png \
